# github-analyzer-profile-agent

./: .gitignore  LICENSE  README.md  conftest.py  diarylog.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
infoenv/: .env.example  .gitignore  pyproject.toml
infoenv/.pytest_cache/v/cache/: lastfailed
schemas/: score_profile.py  score_repo.py
tests/: test_github_client.py  test_pip.py  test_research_summary.py  test_score_profile.py  test_score_repo.py
workflow/agentsteam/: config.py  main.py  pipeline.py  report.py
workflow/agentsteam/agents/: advisor.py  analyzer.py  executor.py  researcher.py  runner.py
workflow/agentsteam/prompts/: advisor.txt  analyzer.txt  executor.txt  researcher.txt
workflow/agentsteam/runs/20260530-100158/: 1_github_data.json  2_profile_analysis.json  3_research_findings.json  4_improvement_plan.json  report.md
workflow/agentsteam/schemas/: improvement_action.py  improvement_plan.py  profile_analysis.py  research_findings.py  score_repo.py
workflow/agentsteam/tests/: test_github_client.py  test_improvement_action.py  test_improvement_plan.py  test_profile_analysis.py  test_research_findings.py  test_research_summary.py  test_score_profile.py  test_score_repo.py
workflow/agentsteam/tools/: github_client.py
